--- a/tutorials/java/MapWithMarker/app/src/main/AndroidManifest.xml
+++ b/tutorials/java/MapWithMarker/app/src/main/AndroidManifest.xml
@@ -35,7 +35,14 @@
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="${MAPS_API_KEY}" />
-
+        <activity android:name=".LoginActivity"
+            android:label="login"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity
             android:name=".MapsMarkerActivity"
             android:label="@string/title_activity_maps"
